fork fix and memory leak

--- a/sources/Makefile
+++ b/sources/Makefile
@@ -24,10 +24,12 @@ SRC	=	$(SRC_DIR)/mysh.c			\
 		$(SRC_DIR)/parser/get_path.c		\
 		$(SRC_DIR)/parser/given_path.c		\
 		$(SRC_DIR)/utils/str_utils.c		\
+		$(SRC_DIR)/utils/str_utils_2.c		\
 		$(SRC_DIR)/utils/utils.c		\
 		$(SRC_DIR)/signal/signal.c		\
 		$(SRC_DIR)/environment/environment.c	\
-		$(SRC_DIR)/environment/environment_2.c
+		$(SRC_DIR)/environment/environment_2.c	\
+		$(SRC_DIR)/environment/PS1/generate_prompt.c
 
 WARN	=	-W -Wall -Wextra
 
