--- a/bonus/unittest/Makefile
+++ b/bonus/unittest/Makefile
@@ -42,6 +42,7 @@ SRC     	=       $(SRC_DIR)/mysh.c                       \
 	                $(SRC_DIR)/parser/given_path.c          \
 	                $(SRC_DIR)/utils/str_utils.c            \
 		        $(SRC_DIR)/utils/str_utils_2.c          \
+			$(SRC_DIR)/error/check_status.c		\
 	                $(SRC_DIR)/utils/utils.c                \
 		        $(SRC_DIR)/signal/signal.c              \
 	                $(SRC_DIR)/environment/environment.c    \
